# arm_planner

./: .gitignore  README.md
src/fairino3_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
src/fairino3_v6_moveit2_config/config/: fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.srdf  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/fairino3_v6_planner/: CMakeLists.txt  package.xml  package.xml.new
src/fairino3_v6_planner/config/: config.yaml
src/fairino3_v6_planner/include/fairino3_v6_planner/: pose_goal_planner.hpp
src/fairino3_v6_planner/launch/: pose_goal_planner.launch.py
src/fairino3_v6_planner/scripts/: pose_publisher.py  send_joint_goal.py  send_pose_goal.py  test_joint_states_service.py  test_start_and_goal.py  test_trajectory_service.py
src/fairino3_v6_planner/src/: pose_goal_planner.cpp
src/fairino3_v6_planner/srv/: GetJointStates.srv  GetTrajectoryPoses.srv
